// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/StepList/StepList WithAttributes play-test 1`] = `
<div data-test-block="true">
  <ol id="htmlid"
      class="StepList_stepList__XjLpY dummyClassname"
      lang="nb"
      data-testid="123ID"
  >
  </ol>
</div>
`;

exports[`Tester/StepList/StepList WithBreakPointMobile smoke-test 1`] = `
<div data-test-block="true">
  <div>
    <ol class="StepList_stepList__XjLpY ">
      <li class="StepListStep_step__js1fz StepListStep_step_passive__MQSNI ">
        <div class="StepListStep_stepSideWrapper__Mshb7 "
             tabindex="-1"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_passive__dU8i1">
            1
          </span>
          <div class="StepListStep_stepLine__BOJMv ">
          </div>
        </div>
        <h3 id="steptitle-:ro:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          besvart
        </h3>
        <div class="StepListStep_stepContent__1uagT  
          ">
          <div>
            brødtekst
          </div>
          <button class="InlineButton_button__2aGtg InlineButton_button_withIconLeft__wsxa+  StepListStep_stepEditButton__4I4jx"
                  type="button"
                  aria-describedby="steptitle-:ro:"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
              </path>
            </svg>
            <span class>
              Endre
            </span>
          </button>
        </div>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_passive__MQSNI ">
        <div class="StepListStep_stepSideWrapper__Mshb7 "
             tabindex="-1"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_passive__dU8i1">
            2
          </span>
          <div class="StepListStep_stepLine__BOJMv ">
          </div>
        </div>
        <h3 id="steptitle-:rq:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          besvart 2
        </h3>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
          <div>
            brødtekst
          </div>
        </div>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_active__Pthdd ">
        <div class="StepListStep_stepSideWrapper__Mshb7 "
             tabindex="-1"
             aria-current="step"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_active__44uNJ">
            3
          </span>
          <div class="StepListStep_stepLine__BOJMv ">
          </div>
        </div>
        <h3 id="steptitle-:rr:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          aktivt
        </h3>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
          <div>
            brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst
          </div>
        </div>
        <div class="StepListStep_nextLine__hWgXS">
        </div>
        <span class="StepListStep_buttonWrapper__mewkO">
          <button class="Button_button__pkuNv Button_button_primary__8Ouwo   "
                  type="button"
          >
            <span class="Button_buttonText__JxyB+">
              Neste
            </span>
          </button>
        </span>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_positiveResult__iIy3H ">
        <div class="StepListStep_stepSideWrapper__Mshb7 StepListStep_stepSideWrapper_result__yMOyt"
             tabindex="-1"
             aria-current="step"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_positiveResult__UJmXI">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz StepListStep_stepCircleIcon__ceFIe"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rt:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rt:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <div class="StepListStep_stepLine__BOJMv StepListStep_stepLine_positiveResult__EkfJp">
          </div>
        </div>
        <h3 id="steptitle-:rs:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          positivt resultat
        </h3>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l StepListStep_stepContent_positiveResult__yObTM 
          ">
          <div>
            <h3 class="Heading_heading__7K0um Heading_heading_level4__KEMPA  ">
              Virksomheten skal registreres som særavgiftspliktig.
            </h3>
            <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  ">
              For å bli registrert må du sende en søknad til Skatteetaten.Nedenfor beskriver vi hvordan du går frem og hva du må dokumentere.
            </p>
            <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  ">
              Du må gjøre følgende:
            </p>
            <ol class="List_list__xzA1c   ">
              <li class="ListElement_element__B0xdX ">
                Du må bestemme hvilken organisasjonsform som passer best.
              </li>
              <li class="ListElement_element__B0xdX ">
                Registrere bedriften i Enhetsregisteret ved å fylle ut Samordnetregistermelding
              </li>
              <li class="ListElement_element__B0xdX ">
                Dersom bedriften din har avgiftspliktig omsetning og/eller uttakoverstiger kr 50 000 i løpet av en 12 måneders periode, må duregistrere virksomheten i Merverdiavgiftsregisteret.
              </li>
            </ol>
          </div>
        </div>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_neutralResult__2WfLh ">
        <div class="StepListStep_stepSideWrapper__Mshb7 StepListStep_stepSideWrapper_result__yMOyt"
             tabindex="-1"
             aria-current="step"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_neutralResult__FtI1x">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz StepListStep_stepCircleIcon__ceFIe"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rv:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rv:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <div class="StepListStep_stepLine__BOJMv StepListStep_stepLine_neutralResult__s7I7X">
          </div>
        </div>
        <h3 id="steptitle-:ru:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          neutralt resultat
        </h3>
        <div class="Panel_panel__KlvnD Panel_panel_filled__udR+n Panel_panel_ochre__1LtLP Panel_panel_paddingXL__HCgRu Panel_panel_spacingXXS__ljNS0  StepListStep_resultIntro__Ok83p">
          <div class="Panel_panelArticle__4fhzq">
            <h3 class="Heading_heading__7K0um Heading_heading_level3__T5BVI Heading_heading_hasSpacingSmall__ofrX+ ">
              Intro til steget
            </h3>
            innhold
          </div>
        </div>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l StepListStep_stepContent_neutralResult__cWoyS 
          ">
          <div>
            more brødtekst
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Tester/StepList/StepList WithBreakPointS smoke-test 1`] = `
<div data-test-block="true">
  <div>
    <ol class="StepList_stepList__XjLpY ">
      <li class="StepListStep_step__js1fz StepListStep_step_passive__MQSNI ">
        <div class="StepListStep_stepSideWrapper__Mshb7 "
             tabindex="-1"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_passive__dU8i1">
            1
          </span>
          <div class="StepListStep_stepLine__BOJMv ">
          </div>
        </div>
        <h3 id="steptitle-:r8:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          besvart
        </h3>
        <div class="StepListStep_stepContent__1uagT  
          ">
          <div>
            brødtekst
          </div>
          <button class="InlineButton_button__2aGtg InlineButton_button_withIconLeft__wsxa+  StepListStep_stepEditButton__4I4jx"
                  type="button"
                  aria-describedby="steptitle-:r8:"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
              </path>
            </svg>
            <span class>
              Endre
            </span>
          </button>
        </div>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_passive__MQSNI ">
        <div class="StepListStep_stepSideWrapper__Mshb7 "
             tabindex="-1"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_passive__dU8i1">
            2
          </span>
          <div class="StepListStep_stepLine__BOJMv ">
          </div>
        </div>
        <h3 id="steptitle-:ra:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          besvart 2
        </h3>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
          <div>
            brødtekst
          </div>
        </div>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_active__Pthdd ">
        <div class="StepListStep_stepSideWrapper__Mshb7 "
             tabindex="-1"
             aria-current="step"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_active__44uNJ">
            3
          </span>
          <div class="StepListStep_stepLine__BOJMv ">
          </div>
        </div>
        <h3 id="steptitle-:rb:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          aktivt
        </h3>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
          <div>
            brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst
          </div>
        </div>
        <div class="StepListStep_nextLine__hWgXS">
        </div>
        <span class="StepListStep_buttonWrapper__mewkO">
          <button class="Button_button__pkuNv Button_button_primary__8Ouwo   "
                  type="button"
          >
            <span class="Button_buttonText__JxyB+">
              Neste
            </span>
          </button>
        </span>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_positiveResult__iIy3H ">
        <div class="StepListStep_stepSideWrapper__Mshb7 StepListStep_stepSideWrapper_result__yMOyt"
             tabindex="-1"
             aria-current="step"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_positiveResult__UJmXI">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz StepListStep_stepCircleIcon__ceFIe"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rd:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rd:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <div class="StepListStep_stepLine__BOJMv StepListStep_stepLine_positiveResult__EkfJp">
          </div>
        </div>
        <h3 id="steptitle-:rc:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          positivt resultat
        </h3>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l StepListStep_stepContent_positiveResult__yObTM 
          ">
          <div>
            <h3 class="Heading_heading__7K0um Heading_heading_level4__KEMPA  ">
              Virksomheten skal registreres som særavgiftspliktig.
            </h3>
            <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  ">
              For å bli registrert må du sende en søknad til Skatteetaten.Nedenfor beskriver vi hvordan du går frem og hva du må dokumentere.
            </p>
            <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  ">
              Du må gjøre følgende:
            </p>
            <ol class="List_list__xzA1c   ">
              <li class="ListElement_element__B0xdX ">
                Du må bestemme hvilken organisasjonsform som passer best.
              </li>
              <li class="ListElement_element__B0xdX ">
                Registrere bedriften i Enhetsregisteret ved å fylle ut Samordnetregistermelding
              </li>
              <li class="ListElement_element__B0xdX ">
                Dersom bedriften din har avgiftspliktig omsetning og/eller uttakoverstiger kr 50 000 i løpet av en 12 måneders periode, må duregistrere virksomheten i Merverdiavgiftsregisteret.
              </li>
            </ol>
          </div>
        </div>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_neutralResult__2WfLh ">
        <div class="StepListStep_stepSideWrapper__Mshb7 StepListStep_stepSideWrapper_result__yMOyt"
             tabindex="-1"
             aria-current="step"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_neutralResult__FtI1x">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz StepListStep_stepCircleIcon__ceFIe"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rf:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rf:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <div class="StepListStep_stepLine__BOJMv StepListStep_stepLine_neutralResult__s7I7X">
          </div>
        </div>
        <h3 id="steptitle-:re:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          neutralt resultat
        </h3>
        <div class="Panel_panel__KlvnD Panel_panel_filled__udR+n Panel_panel_ochre__1LtLP Panel_panel_paddingXL__HCgRu Panel_panel_spacingXXS__ljNS0  StepListStep_resultIntro__Ok83p">
          <div class="Panel_panelArticle__4fhzq">
            <h3 class="Heading_heading__7K0um Heading_heading_level3__T5BVI Heading_heading_hasSpacingSmall__ofrX+ ">
              Intro til steget
            </h3>
            innhold
          </div>
        </div>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l StepListStep_stepContent_neutralResult__cWoyS 
          ">
          <div>
            more brødtekst
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Tester/StepList/StepList WithBreakPointXS smoke-test 1`] = `
<div data-test-block="true">
  <div>
    <ol class="StepList_stepList__XjLpY ">
      <li class="StepListStep_step__js1fz StepListStep_step_passive__MQSNI ">
        <div class="StepListStep_stepSideWrapper__Mshb7 "
             tabindex="-1"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_passive__dU8i1">
            1
          </span>
          <div class="StepListStep_stepLine__BOJMv ">
          </div>
        </div>
        <h3 id="steptitle-:rg:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          besvart
        </h3>
        <div class="StepListStep_stepContent__1uagT  
          ">
          <div>
            brødtekst
          </div>
          <button class="InlineButton_button__2aGtg InlineButton_button_withIconLeft__wsxa+  StepListStep_stepEditButton__4I4jx"
                  type="button"
                  aria-describedby="steptitle-:rg:"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
              </path>
            </svg>
            <span class>
              Endre
            </span>
          </button>
        </div>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_passive__MQSNI ">
        <div class="StepListStep_stepSideWrapper__Mshb7 "
             tabindex="-1"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_passive__dU8i1">
            2
          </span>
          <div class="StepListStep_stepLine__BOJMv ">
          </div>
        </div>
        <h3 id="steptitle-:ri:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          besvart 2
        </h3>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
          <div>
            brødtekst
          </div>
        </div>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_active__Pthdd ">
        <div class="StepListStep_stepSideWrapper__Mshb7 "
             tabindex="-1"
             aria-current="step"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_active__44uNJ">
            3
          </span>
          <div class="StepListStep_stepLine__BOJMv ">
          </div>
        </div>
        <h3 id="steptitle-:rj:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          aktivt
        </h3>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
          <div>
            brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst
          </div>
        </div>
        <div class="StepListStep_nextLine__hWgXS">
        </div>
        <span class="StepListStep_buttonWrapper__mewkO">
          <button class="Button_button__pkuNv Button_button_primary__8Ouwo   "
                  type="button"
          >
            <span class="Button_buttonText__JxyB+">
              Neste
            </span>
          </button>
        </span>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_positiveResult__iIy3H ">
        <div class="StepListStep_stepSideWrapper__Mshb7 StepListStep_stepSideWrapper_result__yMOyt"
             tabindex="-1"
             aria-current="step"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_positiveResult__UJmXI">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz StepListStep_stepCircleIcon__ceFIe"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rl:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rl:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <div class="StepListStep_stepLine__BOJMv StepListStep_stepLine_positiveResult__EkfJp">
          </div>
        </div>
        <h3 id="steptitle-:rk:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          positivt resultat
        </h3>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l StepListStep_stepContent_positiveResult__yObTM 
          ">
          <div>
            <h3 class="Heading_heading__7K0um Heading_heading_level4__KEMPA  ">
              Virksomheten skal registreres som særavgiftspliktig.
            </h3>
            <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  ">
              For å bli registrert må du sende en søknad til Skatteetaten.Nedenfor beskriver vi hvordan du går frem og hva du må dokumentere.
            </p>
            <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  ">
              Du må gjøre følgende:
            </p>
            <ol class="List_list__xzA1c   ">
              <li class="ListElement_element__B0xdX ">
                Du må bestemme hvilken organisasjonsform som passer best.
              </li>
              <li class="ListElement_element__B0xdX ">
                Registrere bedriften i Enhetsregisteret ved å fylle ut Samordnetregistermelding
              </li>
              <li class="ListElement_element__B0xdX ">
                Dersom bedriften din har avgiftspliktig omsetning og/eller uttakoverstiger kr 50 000 i løpet av en 12 måneders periode, må duregistrere virksomheten i Merverdiavgiftsregisteret.
              </li>
            </ol>
          </div>
        </div>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_neutralResult__2WfLh ">
        <div class="StepListStep_stepSideWrapper__Mshb7 StepListStep_stepSideWrapper_result__yMOyt"
             tabindex="-1"
             aria-current="step"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_neutralResult__FtI1x">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz StepListStep_stepCircleIcon__ceFIe"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rn:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rn:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <div class="StepListStep_stepLine__BOJMv StepListStep_stepLine_neutralResult__s7I7X">
          </div>
        </div>
        <h3 id="steptitle-:rm:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          neutralt resultat
        </h3>
        <div class="Panel_panel__KlvnD Panel_panel_filled__udR+n Panel_panel_ochre__1LtLP Panel_panel_paddingXL__HCgRu Panel_panel_spacingXXS__ljNS0  StepListStep_resultIntro__Ok83p">
          <div class="Panel_panelArticle__4fhzq">
            <h3 class="Heading_heading__7K0um Heading_heading_level3__T5BVI Heading_heading_hasSpacingSmall__ofrX+ ">
              Intro til steget
            </h3>
            innhold
          </div>
        </div>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l StepListStep_stepContent_neutralResult__cWoyS 
          ">
          <div>
            more brødtekst
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Tester/StepList/StepList WithMultipleSteps play-test 1`] = `
<div data-test-block="true">
  <ol class="StepList_stepList__XjLpY ">
    <li id=":r10:-1"
        class="StepListStep_step__js1fz StepListStep_step_passive__MQSNI "
    >
      <div class="StepListStep_stepSideWrapper__Mshb7 "
           id=":r10:-1-focus-target"
           tabindex="-1"
      >
        <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_passive__dU8i1">
          1
        </span>
        <div class="StepListStep_stepLine__BOJMv ">
        </div>
      </div>
      <h3 id="steptitle-:r10:-1"
          class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
      >
        Hva holder du på med?
      </h3>
      <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
        <div>
          Varer og tjenester
        </div>
      </div>
    </li>
    <li id=":r10:-2"
        class="StepListStep_step__js1fz StepListStep_step_passive__MQSNI "
    >
      <div class="StepListStep_stepSideWrapper__Mshb7 "
           id=":r10:-2-focus-target"
           tabindex="-1"
      >
        <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_passive__dU8i1">
          2
        </span>
        <div class="StepListStep_stepLine__BOJMv ">
        </div>
      </div>
      <h3 id="steptitle-:r10:-2"
          class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
      >
        Hva gjør du?
      </h3>
      <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
        <div>
          Selger
        </div>
      </div>
    </li>
    <li id=":r10:-3"
        class="StepListStep_step__js1fz StepListStep_step_passive__MQSNI "
    >
      <div class="StepListStep_stepSideWrapper__Mshb7 "
           id=":r10:-3-focus-target"
           tabindex="-1"
      >
        <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_passive__dU8i1">
          3
        </span>
        <div class="StepListStep_stepLine__BOJMv ">
        </div>
      </div>
      <h3 id="steptitle-:r10:-3"
          class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
      >
        Salg av varer og tjenester
      </h3>
      <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
        <div>
          <div>
            ja
          </div>
        </div>
      </div>
    </li>
    <li id=":r10:-4"
        class="StepListStep_step__js1fz StepListStep_step_positiveResult__iIy3H "
    >
      <div class="StepListStep_stepSideWrapper__Mshb7 StepListStep_stepSideWrapper_result__yMOyt"
           id=":r10:-4-focus-target"
           tabindex="-1"
           aria-current="step"
      >
        <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_positiveResult__UJmXI">
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz StepListStep_stepCircleIcon__ceFIe"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r1f:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r1f:">
              Fullført
            </title>
            <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
            </path>
          </svg>
        </span>
        <div class="StepListStep_stepLine__BOJMv StepListStep_stepLine_positiveResult__EkfJp">
        </div>
      </div>
      <h3 id="steptitle-:r10:-4"
          class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
      >
        Vårt veiledende svar
      </h3>
      <div class="Panel_panel__KlvnD Panel_panel_filled__udR+n Panel_panel_forest__8dVE7 Panel_panel_paddingXL__HCgRu Panel_panel_spacingXXS__ljNS0  StepListStep_resultIntro__Ok83p">
        <div class="Panel_panelArticle__4fhzq">
          <h4 class="Heading_heading__7K0um Heading_heading_level3__T5BVI Heading_heading_hasSpacingSmall__ofrX+ ">
            Virksomheten skal registreres som særavgiftspliktig.
          </h4>
          <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  ">
            brødtekst
          </p>
        </div>
      </div>
      <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l StepListStep_stepContent_positiveResult__yObTM 
          ">
        <div>
          <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  ">
            brødtekst
          </p>
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/StepList WithRef play-test 1`] = `
<div data-test-block="true">
  <ol class="StepList_stepList__XjLpY "
      data-testid="123ID"
      id="dummyIdForwardedFromRef"
  >
  </ol>
</div>
`;

exports[`Tester/StepList/StepList WithVariants smoke-test 1`] = `
<div data-test-block="true">
  <div>
    <ol class="StepList_stepList__XjLpY ">
      <li class="StepListStep_step__js1fz StepListStep_step_passive__MQSNI ">
        <div class="StepListStep_stepSideWrapper__Mshb7 "
             tabindex="-1"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_passive__dU8i1">
            1
          </span>
          <div class="StepListStep_stepLine__BOJMv ">
          </div>
        </div>
        <h3 id="steptitle-:r0:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          besvart
        </h3>
        <div class="StepListStep_stepContent__1uagT  
          ">
          <div>
            brødtekst
          </div>
          <button class="InlineButton_button__2aGtg InlineButton_button_withIconLeft__wsxa+  StepListStep_stepEditButton__4I4jx"
                  type="button"
                  aria-describedby="steptitle-:r0:"
          >
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz InlineButton_icon__YMesU"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
              </path>
            </svg>
            <span class>
              Endre
            </span>
          </button>
        </div>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_passive__MQSNI ">
        <div class="StepListStep_stepSideWrapper__Mshb7 "
             tabindex="-1"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_passive__dU8i1">
            2
          </span>
          <div class="StepListStep_stepLine__BOJMv ">
          </div>
        </div>
        <h3 id="steptitle-:r2:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          besvart 2
        </h3>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
          <div>
            brødtekst
          </div>
        </div>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_active__Pthdd ">
        <div class="StepListStep_stepSideWrapper__Mshb7 "
             tabindex="-1"
             aria-current="step"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_active__44uNJ">
            3
          </span>
          <div class="StepListStep_stepLine__BOJMv ">
          </div>
        </div>
        <h3 id="steptitle-:r3:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          aktivt
        </h3>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l 
          ">
          <div>
            brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst
          </div>
        </div>
        <div class="StepListStep_nextLine__hWgXS">
        </div>
        <span class="StepListStep_buttonWrapper__mewkO">
          <button class="Button_button__pkuNv Button_button_primary__8Ouwo   "
                  type="button"
          >
            <span class="Button_buttonText__JxyB+">
              Neste
            </span>
          </button>
        </span>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_positiveResult__iIy3H ">
        <div class="StepListStep_stepSideWrapper__Mshb7 StepListStep_stepSideWrapper_result__yMOyt"
             tabindex="-1"
             aria-current="step"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_positiveResult__UJmXI">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz StepListStep_stepCircleIcon__ceFIe"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r5:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r5:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <div class="StepListStep_stepLine__BOJMv StepListStep_stepLine_positiveResult__EkfJp">
          </div>
        </div>
        <h3 id="steptitle-:r4:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          positivt resultat
        </h3>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l StepListStep_stepContent_positiveResult__yObTM 
          ">
          <div>
            <h3 class="Heading_heading__7K0um Heading_heading_level4__KEMPA  ">
              Virksomheten skal registreres som særavgiftspliktig.
            </h3>
            <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  ">
              For å bli registrert må du sende en søknad til Skatteetaten.Nedenfor beskriver vi hvordan du går frem og hva du må dokumentere.
            </p>
            <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_standard__ObBkf  ">
              Du må gjøre følgende:
            </p>
            <ol class="List_list__xzA1c   ">
              <li class="ListElement_element__B0xdX ">
                Du må bestemme hvilken organisasjonsform som passer best.
              </li>
              <li class="ListElement_element__B0xdX ">
                Registrere bedriften i Enhetsregisteret ved å fylle ut Samordnetregistermelding
              </li>
              <li class="ListElement_element__B0xdX ">
                Dersom bedriften din har avgiftspliktig omsetning og/eller uttakoverstiger kr 50 000 i løpet av en 12 måneders periode, må duregistrere virksomheten i Merverdiavgiftsregisteret.
              </li>
            </ol>
          </div>
        </div>
      </li>
      <li class="StepListStep_step__js1fz StepListStep_step_neutralResult__2WfLh ">
        <div class="StepListStep_stepSideWrapper__Mshb7 StepListStep_stepSideWrapper_result__yMOyt"
             tabindex="-1"
             aria-current="step"
        >
          <span class="StepListStep_stepCircle__wWmPq
        StepListStep_stepCircle_neutralResult__FtI1x">
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz StepListStep_stepCircleIcon__ceFIe"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r7:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r7:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <div class="StepListStep_stepLine__BOJMv StepListStep_stepLine_neutralResult__s7I7X">
          </div>
        </div>
        <h3 id="steptitle-:r6:"
            class="Heading_heading__7K0um Heading_heading_level5__CrIzo  StepListStep_stepHeading__Jg3rf"
        >
          neutralt resultat
        </h3>
        <div class="Panel_panel__KlvnD Panel_panel_filled__udR+n Panel_panel_ochre__1LtLP Panel_panel_paddingXL__HCgRu Panel_panel_spacingXXS__ljNS0  StepListStep_resultIntro__Ok83p">
          <div class="Panel_panelArticle__4fhzq">
            <h3 class="Heading_heading__7K0um Heading_heading_level3__T5BVI Heading_heading_hasSpacingSmall__ofrX+ ">
              Intro til steget
            </h3>
            innhold
          </div>
        </div>
        <div class="StepListStep_stepContent__1uagT StepListStep_stepContent_noButton__JAD3l StepListStep_stepContent_neutralResult__cWoyS 
          ">
          <div>
            more brødtekst
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;
